js/js.translator/testData/incremental/invalidation/privateDeclarationLeakThroughDefaultParam/main/f.11.kt
private object Obj {
    val x = "11"
}

private inline fun bar() = Obj.x

internal inline fun foo(lambda: () -> String = ::bar): String {
    return lambda()
}
